--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
                         <h3 class="resume-title">Experience</h3>
                         <div class="resume-item">
                             <h4>Junior Software Engineer</h4>
-                            <p><em>IHITS Technologies,#201, Level 2, SCK-01, Smart City, Kakkanad, Cochin, Kerala,india</em></p>
-                            <h6></h6>
+                            <p><em><span class="company_Details">IHITS Technologies</span> #201, Level 2, SCK-01, Smart City, Kakkanad, Cochin, Kerala,india</em></p>
+                            <h5>A product based company specializing in human resource sector</h5>
+
                             <ul>
                                 <li>Develop dynamic, visually-attractive, end-to-end, and innovative software product/apps including front-end and back-end</li>
                                 <li>Able to work with databases, servers, APIs and version control systems</li>
@@ -329,11 +330,39 @@
                                 <li>Basic understanding of front-end technologies, such as JavaScript, HTML5, and CSS3.</li>
                                 <li>Knowledge of object-relational mapping (ORM)</li>
                             </ul>
-                            <h5>Contact</h5>
+
                         </div>
                         <div class="resume-item">
                             <h4>Junior Software Engineer</h4>
-                            <p><em>Sinergia Labs Level 1, Smart City, Kakkanad, Cochin, Kerala,india</em></p>
+                            <p><em><span class="company_Details">Sinergia Labs</span> -- Level 1, Smart City, Kakkanad, Cochin, Kerala,india</em></p>
+                            <h5>Service-based company</h5>
+                            <ul>
+                                <li>Develop dynamic, visually-attractive, end-to-end, and innovative software product/apps including front-end and back-end</li>
+                                <li>Able to work with databases, servers, APIs and version control systems</li>
+                                <li>Implement and maintain Django-based applications</li>
+                                <li>Data modeling, SQL and Database architecture designing</li>
+                                <li>Basic understanding of front-end technologies, such as JavaScript, HTML5, and CSS3.</li>
+                                <li>Knowledge of object-relational mapping (ORM)</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Software Engineer</h4>
+                            <p><em><span class="company_Details">Experion Technologies</span> -- 4th Floor, Athulya Building, Infopark SEZ, Kakkanad, Kochi – 682042</em></p>
+                            <h5>A product and service based company</h5>
+                            <ul>
+                                <li>Develop dynamic, visually-attractive, end-to-end, and innovative software product/apps including front-end and back-end</li>
+                                <li>Able to work with databases, servers, APIs and version control systems</li>
+                                <li>Implement and maintain Django-based applications</li>
+                                <li>Data modeling, SQL and Database architecture designing</li>
+                                <li>Basic understanding of front-end technologies, such as JavaScript, HTML5, and CSS3.</li>
+                                <li>Knowledge of object-relational mapping (ORM)</li>
+                            </ul>
+                        </div>
+
+                        <div class="resume-item">
+                            <h4>Senior Associate Consultant</h4>
+                            <p><em><span class="company_Details">Infosys</span> -- Plot No. 1 Attipara Village, Technopark Campus, II, Thiruvananthapuram, Kerala 695583</em></p>
+                            <h5>A product and service based company</h5>
                             <ul>
                                 <li>Develop dynamic, visually-attractive, end-to-end, and innovative software product/apps including front-end and back-end</li>
                                 <li>Able to work with databases, servers, APIs and version control systems</li>
@@ -367,19 +396,16 @@
                         </div>
 
                         <div class="project-item">
-                            <h4>Shopee</h4>
+                            <h4>HRMS Colud</h4>
                             <p><em>This is E-commerce Website:<a href="https://shopeemodel-app.herokuapp.com/"><Span class="fw-bold">Shopee</Span></a></em></p>
                             <p><em>This used free space in heroku and PostgreSql.this is not saved media files, the username and password is(admin-user :shopee, password:shopeeadmin). you can check this project</em></p>
                             <ul>
-                                <li>is project deals with developing a Virtual website ‘E-commerce Website’. It provides the user with a list of the various products available for purchase in the store. For the convenience of online shopping, a shopping cart
-                                    is provided to the user. After the selection of the goods, it is sent for the order confirmation process. The system is implemented using Python’s web framework Django. To develop an e-commerce website, it is necessary
-                                    to study and understand many technologies.</li>
-                                <li> The scope of the project will be limited to some functions of the e-commerce website. It will display products, customers can select catalogs and select products, and can remove products from their cart specifying the quantity
-                                    of each item. Selected items will be collected in a cart. At checkout, the item on the card will be presented as an order. Customers can pay for the items in the cart to complete an order. This project has great future
-                                    scope. The project also provides security with the use of login ID and passwords, so that no unauthorized users can access your account. The only authorized person who has the appropriate access authority can access
-                                    the software.</li>
-                                <li>Technologies used in the project: Django framework and PostgreSql database.</li>
-                                <li>Customer Interface:</li>
+                                <li>HRMS (Human Resource Management System) is a combination of systems and processes that connect human resource management and information technology through HR software.</li>
+                                <li> Decisions Plus HRMS is a flexible system can be used for efficiently manage the HR needs of an organization. Decisions Plus has Web based and Client - Server applications, The Modules covered are: Administration, Planning
+                                    & Budgeting, Recruitment, HRIS, Performance Management, Training, Employee Re-Assign, Time & Leave Management, Payroll, Employee Exit and Employee-Manager Portal</li>
+                                <li>Technologies used in the project: Dot Net web Api With angular and Ms-sql database.</li>
+
+                                <li>Administration:</li>
                                 <ul>
                                     <li>Customer shops for a product</li>
                                     <li>Customer changes quantity</li>
@@ -388,7 +414,7 @@
                                     <li>Customer checks out</li>
                                     <li>Customer sends order</li>
                                 </ul>
-                                <li>Admin Interface:</li>
+                                <li>Planning & Budgeting:</li>
                                 <ul>
                                     <li>Admin logs in</li>
                                     <li>Admin inserts item</li>
@@ -396,7 +422,7 @@
                                     <li>Admin modifies item</li>
                                 </ul>
                                 <li>Shopee Source Code are hosted in github Link: <a href="https://github.com/MTsrf/shopee"><span class="fw-bold">Shopee Source code</span></a> </li>
-                                <li>The Projects are Deploy in heroku and Database is Used in PostgreSql</li>
+                                <li>The Projects are Deploy in Azure colud and Database is Used in Ms-sql</li>
                             </ul>
                         </div>
                         <div class="project-item">
