--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                         </div>
                         <div class="project-item">
                             <h4>EcoActive</h4>
-                            <p><em>This is client website:<a href="https://www.ecoactiv.com.au"><Span class="fw-bold"></Span></a>EcoActive</em></p>
+                            <p><em>This is client website:<a href="https://www.ecoactiv.com.au"><Span class="fw-bold">EcoActive</Span></a></em></p>
                             <ul>
                                 <li>Physical into the digital P2D is a middleware provider, leading the way in the
                                     global supply chain enabling real visibility to the chain of custody,
